# mini_project_kokas

./: .gitignore  .gitmodules  README.md
src/: README.md  Random_Surfacetrial_point_poissonlod_300.ply  Random_Surfacetrial_point_poissonlod_800.ply  Random_Surfacetrial_point_poissonlod_8000.ply  Random_Surfacetrial_pointlod_100000.stl
src/Plotting/: CMakeLists.txt  package.xml
src/Plotting/data/: data.txt  data2.txt  zedPoses.txt
src/Plotting/include/: Plotter.h
src/Plotting/prevTraj/: GTcamPosition.txt  GTcamTrajectory.txt  ORB_SLAM3.txt  camPosition.txt  camTrajectory.txt  dual_cam.txt  ground_truth.txt  orbslam_backwards.txt  single_cam.txt
src/Plotting/py/: DcamTrajectory.txt  ORB_SLAM3.txt  change_the_path.py  csl_dual_cam_traj.txt  dual_cam.txt  dual_cam_L.txt  dual_cam_LC.txt  dual_cam_NLC.txt  dual_cam_big_NLC.txt  dual_cam_exp_6.txt  dual_cam_obj.txt  dual_cam_real_for_change.txt  dual_cam_trajB.txt  dual_cam_trajB_LC.txt  dual_cam_traj_LC.txt  dual_cam_traj_t.txt  dual_cam_vines.txt  ground_truth.txt  ground_truth_BLC.txt  ground_truth_L.txt  ground_truth_exp_6.txt  ground_truth_exp_62.txt  ground_truth_move.txt  ground_truth_nomove.txt  ground_truth_obj.txt  ground_truth_pos.txt  ground_truth_simu.txt  ground_truth_traj.txt  ground_truth_traj_backup.txt  ground_truth_traj_exp_07.txt  ground_truth_traj_real_for_change.txt  ground_truth_vines.txt  orbslam3.txt  orbslam3_LC.txt  orbslam3_cls.txt  orbslam3_exp_07.txt  orbslam3_exp_07_backup.txt  orbslam3_obj.txt  orbslam3_simu.txt  orbslam_vine_2wrongLC.txt  (+20 more)
src/Plotting/src/: Plotter.cpp  plot.cpp
src/Plotting/to_send/: ground_truth_traj.txt  plotPaths.py
src/Random_Surface/: create_mesh_vertices.py  creating_mesh.py  cube.stl  modifying_mesh.py  new_stl_file.stl  pyvista_trial.py  random_surface.py  seeds.txt  seedss.txt  trial.stl
src/argos_config/: CMakeLists.txt  README.md  config.json  package.xml
src/argos_config/config/gait/: gait.yaml
src/argos_config/config/joints/: joints.yaml
src/argos_config/config/links/: links.yaml
src/argos_config/config/move_base/: base_local_planner_holonomic_params.yaml  costmap_common_params.yaml
src/argos_config/config/ros_control/: ros_control.yaml
src/argos_config/config/rviz/: rviz_config.rviz
src/argos_config/include/: quadruped_description.h
src/argos_config/launch/: argos_gazebo.launch  bringup.launch  change_world.launch  depth_to_laser.launch  disparity_to_depth.launch  gazebo.launch  gazebo_disp.launch  gazebo_point.launch  hector_mapping.launch  hector_slam.launch  navigate.launch  slam.launch  spawn_robot.launch  trial_xml.launch
src/argos_config/launch/depth_camera_to_laserscan/: dc_gazebo.launch  dc_slam.launch  depth_to_laser_depth.launch  move_base_depth.launch
src/argos_config/launch/disparity_to_laserscan/: disp_gazebo.launch
src/argos_config/launch/ground_truth/: bringup_champ.launch  bringup_gt.launch  gt_gazebo.launch  gt_slam.launch  move_base_gt.launch
src/argos_config/launch/include/: gmapping.launch  gmapping_ground_truth.launch  move_base.launch
src/argos_config/launch/orb_slam_launch/: orb_slam.launch
src/argos_config/launch/pointcloud_to_laserscan/: point_gazebo.launch  point_to_laser_node.launch
src/argos_config/launch/vineyard/: vine_gazebo.launch
src/argos_config/launch/vineyard/argos/: vine_argos.launch
src/argos_config/launch/vineyard/husky/: arena_husky_gazebo.launch  control.launch  demo_simulation.launch  description.launch  husky_gazebo.launch  husky_gmapping.launch  husky_point_to_laser.launch  husky_vineyard.launch  point_2.launch  spawn_husky.launch  vine_husky.launch
src/argos_config/rviz/: hector_mapping.rviz  husky.rviz  navigate.rviz  navigate_depth.rviz  navigate_disp.rviz
src/argos_config/scripts/: automate_vines.py  automate_vines_exp.py  camera_sub.cpp  camera_sub_2.cpp  create_real_simu.py  trial.world
src/argos_config/worlds/: arena_world.world  arena_world_2.world  merged.world  outdoor_changed.world  outdoor_new.world  trialForSimu.world  vineyard.world  vineyard_2.world
src/argos_config/worlds/tif_files/: cropped.tif  cropped_gdal.tif
src/argos_config/worlds/vineyard/: trial.world  trialForSimu.world  vineyard.world  vineyard_2.world
src/camera_sub/: CMakeLists.txt  package.xml
src/camera_sub/launch/: subscribe_to.launch
src/camera_sub/src/: camera_subscriber.cpp
src/cmd_velToCout/: CMakeLists.txt  package.xml
src/vio_slam/: CMakeLists.txt  README.md  build.sh  build_no_ros.sh  package.xml
src/vio_slam/config/: config.yaml  config_V1_02.yaml  config_csl_exp.yaml  config_demo_zed.yaml  config_exp.yaml  config_for_paper.yaml  config_for_paper_lower.yaml  config_gaz_exp.yaml  config_kitti.yaml  config_kitti_00.yaml  config_kitti_01.yaml  config_kitti_02.yaml  config_kitti_03.yaml  config_kitti_04.yaml  config_kitti_05.yaml  config_kitti_06.yaml  config_kitti_07.yaml  config_kitti_08.yaml  config_kitti_09.yaml  config_kitti_10.yaml  config_kitti_11.yaml  config_simulation.yaml
src/vio_slam/config/AT/: tags_exp.yaml
src/vio_slam/include/: AprilTagDetection.h  AprilTagDetectionArray.h  AprilTagDetectionArray_2.h  AprilTagDetection_2.h  Camera.h  Conversions.h  FeatureDrawer.h  FeatureExtractor.h  FeatureManager.h  FeatureMatcher.h  FeatureTracker.h  Frame.h  KeyFrame.h  LocalBA.h  Map.h  MaxClique.h  Optimizer.h  PoseEstimator.h  Settings.h  System.h  Viewer.h  trial.h
src/vio_slam/launch/: DualCam.launch  DualCamRT.launch  DualCamRTAT.launch  SingleCam.launch  SingleCamRT.launch  single_cam.launch  subscribe_to.launch  trial.launch
src/vio_slam/src/: Camera.cpp  Conversions.cpp  DualCam.cpp  DualCamRT.cpp  DualCamRT_csl_exp.cpp  DualCamRT_gaz_exp.cpp  FeatureDrawer.cpp  FeatureExtractor.cpp  FeatureManager.cpp  FeatureMatcher.cpp  FeatureTracker.cpp  Frame.cpp  KeyFrame.cpp  LocalBA.cpp  Map.cpp  MaxClique.cpp  MultiSlam.cpp  PoseEstimator.cpp  Settings.cpp  SingleCam.cpp  SingleCamRT.cpp  System.cpp  VSLAMOneCam.cpp  VSLAMOneCamRT.cpp  VSLAMTwoCam.cpp  VSLAMTwoCamRT.cpp  Viewer.cpp  VioSlam.cpp  tempCodeRunnerFile.cpp  trial.cpp  trials.cpp
(+52 files in other folders)
