<?xml version="1.0"?>
<package format="2">
  <name>argos_config</name>
  <version>0.1.0</version>
  <description>argos Champ Config Package</description>

  <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
  <author>Juan Miguel Jimeno</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>champ_base</exec_depend>
  <exec_depend>champ_bringup</exec_depend>
  <exec_depend>champ_config</exec_depend>
  <exec_depend>champ_gazebo</exec_depend>
  <exec_depend>mini_project</exec_depend>
  <exec_depend>champ_navigation</exec_depend>
  <exec_depend>stereo_image_proc</exec_depend>
  <exec_depend>disparity_image_proc</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>
  <exec_depend>ecl_core</exec_depend>
  <exec_depend>message_to_tf</exec_depend>
  <exec_depend>husky_gazebo</exec_depend>
  <exec_depend>husky_navigation</exec_depend>
  <exec_depend>key_teleop</exec_depend>
  
</package>